# DPAT-4S

./: .gitignore  README.md
lab2/: README.md  part1.ipynb  part2.ipynb  requirements.txt
lab3/: lab3.ipynb  readme.md  requirements.txt
lab4/: README.md  lab4.ipynb  requirements.txt
lab5/: README.md  lab5.py  requirements.txt  vhi_data.csv
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: CameraManager.hpp  ImageProcessor.hpp
lab6/src/: ImageProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  README.md  preinstall.sh
lab7/include/: FaceDetector.hpp  ImageProcessor.hpp  WindowManager.hpp
lab7/src/: CameraManager.cpp  FaceDetector.cpp  ImageProcessor.cpp  WindowManager.cpp  main.cpp
